@@ -1,3 +1,11 @@
+2008-06-24 Gerd Kohlberger <gerdk@svn.gnome.org>
+
+	* src/mt-main.c: (dwell_do_pointer_click): Add a short delay between
+	button-press and -release events. This should allow GOK to handle
+	events generated by mousetweaks.
+
+	For details see bug #538004
+
 2008-06-23 Gerd Kohlberger <gerdk@svn.gnome.org>
 
 	* src/mt-common.c: Fix compiler warnings
